Chapter 3 : COT, Few Shots etc

--- a/modules/03/03-prompts.ipynb
+++ b/modules/03/03-prompts.ipynb
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "id": "GJAH_3KTryUw"
       },
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "id": "Acf6rPrhryUx"
       },
@@ -162,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {
         "id": "iC1F_FdKryUx"
       },
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -203,7 +203,7 @@
               "['context', 'query']"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -223,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -239,7 +239,7 @@
               " HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['query'], input_types={}, partial_variables={}, template='{query}'), additional_kwargs={})]"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -259,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {
         "id": "f37FWLOcryUy"
       },
@@ -287,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -303,7 +303,7 @@
               " HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['query'], input_types={}, partial_variables={}, template='{query}'), additional_kwargs={})]"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -400,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 12,
       "metadata": {
         "id": "_KhquCevryUy"
       },
@@ -431,7 +431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 13,
       "metadata": {
         "id": "jhg8kQkbryUy"
       },
@@ -457,7 +457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -469,10 +469,10 @@
         {
           "data": {
             "text/plain": [
-              "AIMessage(content='Aurelio AI is an AI company that develops tooling for AI engineers, with a particular focus on language AI. They have expertise in building AI agents and information retrieval.\\n\\nThe company offers:\\n*   **Open-source frameworks:** Such as Semantic Router and Semantic Chunkers.\\n*   **An AI Platform:** Providing tools for building with AI.\\n*   **Development services:** Helping other organizations bring their AI technology to market.\\n\\nAurelio AI also became LangChain Experts in September 2024, indicating a strong history of building solutions with the LangChain ecosystem.', additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': []}, id='run-d0a87f88-679c-43e5-be62-7850353bce78-0', usage_metadata={'input_tokens': 183, 'output_tokens': 120, 'total_tokens': 303, 'input_token_details': {'cache_read': 0}})"
+              "AIMessage(content='Aurelio AI is an AI company that develops tooling for AI engineers, with a particular focus on language AI. They have expertise in building AI agents and information retrieval.\\n\\nThe company offers several products and services:\\n*   **Open-source frameworks:** Notably, Semantic Router and Semantic Chunkers.\\n*   **AI Platform:** Providing engineers with tools for building with AI.\\n*   **Development services:** Assisting other organizations in bringing their AI technology to market.\\n\\nAurelio AI also became LangChain Experts in September 2024 due to their experience in building AI solutions with the LangChain ecosystem.', additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': []}, id='run-53e1ce7d-3fec-46be-bc9d-52847d80ba86-0', usage_metadata={'input_tokens': 183, 'output_tokens': 127, 'total_tokens': 310, 'input_token_details': {'cache_read': 0}})"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -512,7 +512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 25,
       "metadata": {
         "id": "iqTvW0BMryUz"
       },
@@ -524,7 +524,7 @@
               " AIMessagePromptTemplate(prompt=PromptTemplate(input_variables=['output'], input_types={}, partial_variables={}, template='{output}'), additional_kwargs={})]"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -556,7 +556,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 41,
       "metadata": {
         "id": "iO-OT9-jryUz"
       },
@@ -567,6 +567,8 @@
         "    {\"input\": \"Here is query #2\", \"output\": \"Here is the answer #2\"},\n",
         "    {\"input\": \"Here is query #3\", \"output\": \"Here is the answer #3\"},\n",
         "    {\"input\": \"Here is query What is your name\", \"output\": \"Here is the answer What is your name\"},\n",
+        "    {\"input\": \"What is your query?\", \"output\": \"What is your answer?\"},\n",
+        "    {\"input\": \"you are my query? Isn't it?\", \"output\": \"you are my answer? Isn't it?\"}\n",
         "]"
       ]
     },
@@ -581,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -601,7 +603,11 @@
             "Human: Here is query #3\n",
             "AI: Here is the answer #3\n",
             "Human: Here is query What is your name\n",
-            "AI: Here is the answer What is your name\n"
+            "AI: Here is the answer What is your name\n",
+            "Human: What is your query?\n",
+            "AI: What is your answer?\n",
+            "Human: you are my query? Isn't it?\n",
+            "AI: you are my answer? Isn't it?\n"
           ]
         }
       ],
@@ -614,6 +620,36 @@
         ")\n",
         "# here is the formatted prompt\n",
         "print(few_shot_prompt.format())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "AIMessage(content='My name is Aditya. and your name find is my answer', additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': []}, id='run-60c2b024-36e0-44e5-a80b-e7b401facf2c-0', usage_metadata={'input_tokens': 123, 'output_tokens': 12, 'total_tokens': 135, 'input_token_details': {'cache_read': 0}})"
+            ]
+          },
+          "execution_count": 53,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "few_shot_prompt.format()\n",
+        "\n",
+        "prompt_template = ChatPromptTemplate.from_messages([\n",
+        "    (\"system\", \"Your role is to reply the user by just using the examples. Do not add any extra information.\"),\n",
+        "    few_shot_prompt,\n",
+        "    (\"user\", \"{query}\"),\n",
+        "])\n",
+        "\n",
+        "pipeline = prompt_template | llm\n",
+        "\n",
+        "pipeline.invoke({\"query\": \"My name is Aditya. and your name find is my query\"})"
       ]
     },
     {
@@ -638,7 +674,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 54,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -651,25 +687,17 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "## Aurelio AI: A Comprehensive Overview\n",
+            "# Aurelio AI\n",
             "\n",
-            "Aurelio AI is a company specializing in the development of AI tools and services, with a particular emphasis on language AI.\n",
+            "Aurelio AI is a company that develops tooling for AI engineers, with a particular focus on language AI.\n",
             "\n",
-            "### Core Offerings:\n",
+            "*   **Expertise:** They have strong expertise in building AI agents and a background in information retrieval.\n",
+            "*   **Open Source Frameworks:** They are the creators of open-source frameworks such as Semantic Router and Semantic Chunkers.\n",
+            "*   **AI Platform:** Aurelio AI offers an AI Platform designed to provide engineers with tools for building AI applications.\n",
+            "*   **Development Services:** The company also provides development services to other organizations to assist them in bringing their AI technology to market.\n",
+            "*   **LangChain Experts:** In September 2024, Aurelio AI achieved recognition as LangChain Experts due to their consistent delivery of AI solutions utilizing the LangChain ecosystem.\n",
             "\n",
-            "*   **AI Tooling for AI Engineers:** Aurelio AI develops and provides tools specifically designed for AI engineers.\n",
-            "*   **Language AI Expertise:** The company possesses significant expertise in language AI, including the development of AI agents and a strong background in information retrieval.\n",
-            "*   **Open Source Frameworks:** They are the creators of prominent open-source frameworks such as:\n",
-            "    *   Semantic Router\n",
-            "    *   Semantic Chunkers\n",
-            "*   **AI Platform:** Aurelio AI offers an AI Platform that equips engineers with the necessary tools to facilitate AI development.\n",
-            "*   **Development Services:** The team also extends its expertise to provide development services for other organizations, assisting them in bringing their AI technologies to market.\n",
-            "\n",
-            "### Recognition and Partnerships:\n",
-            "\n",
-            "*   **LangChain Experts:** Aurelio AI achieved LangChain Expert status in September 2024, acknowledging their extensive experience and successful delivery of AI solutions within the LangChain ecosystem.\n",
-            "\n",
-            "In summary, Aurelio AI is a multifaceted AI company that contributes to the AI ecosystem through its innovative tooling, open-source contributions, platform, and expert development services, particularly within the domain of language AI.\n"
+            "In summary, Aurelio AI is an AI company focused on language AI, offering both open-source tools, a platform, and development services, and they are recognized experts in the LangChain ecosystem.\n"
           ]
         }
       ],
@@ -703,7 +731,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -716,25 +744,17 @@
         {
           "data": {
             "text/markdown": [
-              "## Aurelio AI: A Comprehensive Overview\n",
+              "# Aurelio AI\n",
               "\n",
-              "Aurelio AI is a company specializing in the development of AI tools and services, with a particular emphasis on language AI.\n",
+              "Aurelio AI is a company that develops tooling for AI engineers, with a particular focus on language AI.\n",
               "\n",
-              "### Core Offerings:\n",
+              "*   **Expertise:** They have strong expertise in building AI agents and a background in information retrieval.\n",
+              "*   **Open Source Frameworks:** They are the creators of open-source frameworks such as Semantic Router and Semantic Chunkers.\n",
+              "*   **AI Platform:** Aurelio AI offers an AI Platform designed to provide engineers with tools for building AI applications.\n",
+              "*   **Development Services:** The company also provides development services to other organizations to assist them in bringing their AI technology to market.\n",
+              "*   **LangChain Experts:** In September 2024, Aurelio AI achieved recognition as LangChain Experts due to their consistent delivery of AI solutions utilizing the LangChain ecosystem.\n",
               "\n",
-              "*   **AI Tooling for AI Engineers:** Aurelio AI develops and provides tools specifically designed for AI engineers.\n",
-              "*   **Language AI Expertise:** The company possesses significant expertise in language AI, including the development of AI agents and a strong background in information retrieval.\n",
-              "*   **Open Source Frameworks:** They are the creators of prominent open-source frameworks such as:\n",
-              "    *   Semantic Router\n",
-              "    *   Semantic Chunkers\n",
-              "*   **AI Platform:** Aurelio AI offers an AI Platform that equips engineers with the necessary tools to facilitate AI development.\n",
-              "*   **Development Services:** The team also extends its expertise to provide development services for other organizations, assisting them in bringing their AI technologies to market.\n",
-              "\n",
-              "### Recognition and Partnerships:\n",
-              "\n",
-              "*   **LangChain Experts:** Aurelio AI achieved LangChain Expert status in September 2024, acknowledging their extensive experience and successful delivery of AI solutions within the LangChain ecosystem.\n",
-              "\n",
-              "In summary, Aurelio AI is a multifaceted AI company that contributes to the AI ecosystem through its innovative tooling, open-source contributions, platform, and expert development services, particularly within the domain of language AI."
+              "In summary, Aurelio AI is an AI company focused on language AI, offering both open-source tools, a platform, and development services, and they are recognized experts in the LangChain ecosystem."
             ],
             "text/plain": [
               "<IPython.core.display.Markdown object>"
@@ -813,7 +833,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 56,
       "metadata": {
         "id": "9CRNB9UDryU0"
       },
@@ -864,7 +884,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 57,
       "metadata": {
         "id": "EatYep9JryU1"
       },
@@ -887,7 +907,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 58,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -963,7 +983,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 59,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -978,7 +998,7 @@
               "FewShotChatMessagePromptTemplate(examples=[{'input': 'Can you explain gravity?', 'output': '## Gravity\\n\\nGravity is one of the fundamental forces in the universe.\\n\\n### Discovery\\n\\n* Gravity was first discovered by Sir Isaac Newton in the late 17th century.\\n* It was said that Newton theorized about gravity after seeing an apple fall from a tree.\\n\\n### In General Relativity\\n\\n* Gravity is described as the curvature of spacetime.\\n* The more massive an object is, the more it curves spacetime.\\n* This curvature is what causes objects to fall towards each other.\\n\\n### Gravitons\\n\\n* Gravitons are hypothetical particles that mediate the force of gravity.\\n* They have not yet been detected.\\n\\n**To conclude**, Gravity is a fascinating topic and has been studied extensively since the time of Newton.\\n\\n'}, {'input': 'What is the capital of France?', 'output': '## France\\n\\nThe capital of France is Paris.\\n\\n### Origins\\n\\n* The name Paris comes from the Latin word \"Parisini\" which referred to a Celtic people living in the area.\\n* The Romans named the city Lutetia, which means \"the place where the river turns\".\\n* The city was renamed Paris in the 3rd century BC by the Celtic-speaking Parisii tribe.\\n\\n**To conclude**, Paris is highly regarded as one of the most beautiful cities in the world and is one of the world\\'s greatest cultural and economic centres.\\n\\n'}], input_variables=[], input_types={}, partial_variables={}, example_prompt=ChatPromptTemplate(input_variables=['input', 'output'], input_types={}, partial_variables={}, messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['input'], input_types={}, partial_variables={}, template='{input}'), additional_kwargs={}), AIMessagePromptTemplate(prompt=PromptTemplate(input_variables=['output'], input_types={}, partial_variables={}, template='{output}'), additional_kwargs={})]))"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 59,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -989,7 +1009,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 60,
       "metadata": {
         "id": "cDwfI95_ryU1"
       },
@@ -1013,7 +1033,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1087,7 +1107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 62,
       "metadata": {
         "id": "ReF2-IUjryU1"
       },
@@ -1117,7 +1137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1155,7 +1175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 65,
       "metadata": {
         "id": "4ZYaNGO5ryU2"
       },
@@ -1185,7 +1205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 66,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1254,7 +1274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 68,
       "metadata": {
         "id": "LhpHDEUkryU2"
       },
@@ -1274,7 +1294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
