Chapter 3: mimicing reasoning model

--- a/modules/03/03-prompts.ipynb
+++ b/modules/03/03-prompts.ipynb
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "GJAH_3KTryUw"
       },
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "Acf6rPrhryUx"
       },
@@ -162,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "iC1F_FdKryUx"
       },
@@ -259,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "id": "f37FWLOcryUy"
       },
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -512,7 +512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 15,
       "metadata": {
         "id": "iqTvW0BMryUz"
       },
@@ -524,7 +524,7 @@
               " AIMessagePromptTemplate(prompt=PromptTemplate(input_variables=['output'], input_types={}, partial_variables={}, template='{output}'), additional_kwargs={})]"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -556,7 +556,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 16,
       "metadata": {
         "id": "iO-OT9-jryUz"
       },
@@ -583,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1351,6 +1351,215 @@
         "We almost get the _exact_ same result. The formatting isn't quite as nice but the CoT behavior is clearly there, and the LLM produces the correct final answer!\n",
         "\n",
         "CoT is useful not only for simple question-answering like this, but is also a fundamental component of many agentic systems which will often use CoT steps paired with tool use to solve very complex problems, this is what we see in Gemini's current flagship model `gemini-2.5-pro`. We'll see later in the course how we can do this ourselves."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Mimicking Thinking/Reasoning through few shot prompting"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import re\n",
+        "\n",
+        "class Colors:\n",
+        "    \"\"\"ANSI color codes for terminal output.\"\"\"\n",
+        "    RESET = \"\\033[0m\"\n",
+        "    BOLD = \"\\033[1m\"\n",
+        "    # Colors matching the JavaScript version\n",
+        "    THINKING = \"\\033[90m\"  # Light Gray/Bright Black\n",
+        "    ANSWER = \"\\033[32m\"    # Green\n",
+        "    ERROR = \"\\033[31m\"     # Red\n",
+        "    \n",
+        "    # Background for headers\n",
+        "    HEADER_BG = \"\\033[47m\\033[30m\" # White background, Black foreground\n",
+        "\n",
+        "def print_formatted_response(raw_response: str):\n",
+        "    \"\"\"\n",
+        "    Parses a response string formatted as '<thinking> reasoning </thinking>answer'\n",
+        "    and prints the parts separately with color highlighting.\n",
+        "\n",
+        "    Args:\n",
+        "        raw_response: The raw string output from the model.\n",
+        "    \"\"\"\n",
+        "    \n",
+        "    # Regular expression to capture the thinking process and the final answer\n",
+        "    # Group 1: Thinking content (inside <thinking>...</thinking>)\n",
+        "    # Group 2: Final Answer (after </thinking>)\n",
+        "    pattern = re.compile(r\"<thinking>(.*?)</thinking>(.*)\", re.DOTALL | re.IGNORECASE)\n",
+        "    match = pattern.match(raw_response.strip())\n",
+        "\n",
+        "    if not match:\n",
+        "        print(f\"{Colors.ERROR}{Colors.BOLD}Error:{Colors.RESET} Response format is invalid. Missing or misplaced <thinking> or </thinking> tags.\")\n",
+        "        print(f\"Raw Output: {raw_response}\")\n",
+        "        return\n",
+        "\n",
+        "    # Extract the parts\n",
+        "    thinking_part = match.group(1).strip()\n",
+        "    answer_part = match.group(2).strip()\n",
+        "\n",
+        "    # Print the formatted output using defined color codes\n",
+        "    print(\"-\" * 41)\n",
+        "    print(f\"{Colors.THINKING}{Colors.BOLD}Thinking Process:{Colors.RESET}\")\n",
+        "    print(f\"{Colors.THINKING}  {thinking_part}{Colors.RESET}\")\n",
+        "    print(f\"\\n{Colors.ANSWER}{Colors.BOLD}Final Answer:{Colors.RESET}\")\n",
+        "    print(f\"{Colors.ANSWER}  {answer_part}{Colors.RESET}\")\n",
+        "    print(\"-\" * 41)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "llm = ChatGoogleGenerativeAI(temperature=0.6, \n",
+        "                            model=gemini_model, \n",
+        "                            google_api_key=os.environ[\"GEMINI_API_KEY\"],\n",
+        "                            max_retries=2,\n",
+        "                            timeout=None,\n",
+        "                            max_tokens=None)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "few_shot_prompt = ChatPromptTemplate.from_messages([\n",
+        "    (\"human\", \"{input}\"),\n",
+        "    (\"ai\", \"{output}\"),\n",
+        "])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "examples = [\n",
+        "  {\n",
+        "    \"input\": \"What is the largest planet in our solar system?\",\n",
+        "    \"output\": \"<thinking>The user is asking for the largest planet. I need to recall the order and size of the planets. Jupiter is known to be the most massive and largest by volume in the solar system, excluding the Sun.</thinking>Jupiter.\"\n",
+        "  },\n",
+        "  {\n",
+        "    \"input\": \"In which year did the Titanic sink?\",\n",
+        "    \"output\": \"<thinking>The question asks for the year the Titanic sank. The historical sinking event occurred during its maiden voyage, which is a well-known date in maritime history: 1912.</thinking>1912.\"\n",
+        "  },\n",
+        "  {\n",
+        "    \"input\": \"What is the chemical symbol for gold?\",\n",
+        "    \"output\": \"<thinking>The user wants the chemical symbol for the element gold. This is derived from its Latin name, 'aurum', which corresponds to the symbol Au.</thinking>Au.\"\n",
+        "  },\n",
+        "  {\n",
+        "    \"input\": \"Who painted the Mona Lisa?\",\n",
+        "    \"output\": \"<thinking>I need to identify the artist of the famous Renaissance portrait, the Mona Lisa. This painting is universally attributed to Leonardo da Vinci.</thinking>Leonardo da Vinci.\"\n",
+        "  },\n",
+        "  {\n",
+        "    \"input\": \"What is the capital city of Australia?\",\n",
+        "    \"output\": \"<thinking>The question asks for Australia's capital. Many mistakenly name Sydney or Melbourne, but the official capital is Canberra, which was specifically chosen for this role.</thinking>Canberra.\"\n",
+        "  },\n",
+        "  {\n",
+        "    \"input\": \"What is the process by which plants convert light energy into chemical energy?\",\n",
+        "    \"output\": \"<thinking>The user is asking for the name of the biological process where plants use light to create food. This process is called photosynthesis.</thinking>Photosynthesis.\"\n",
+        "  },\n",
+        "  {\n",
+        "    \"input\": \"Which famous scientist developed the theory of relativity?\",\n",
+        "    \"output\": \"<thinking>I need to recall the scientist most famous for developing the theories of special and general relativity. That individual is Albert Einstein.</thinking>Albert Einstein.\"\n",
+        "  },\n",
+        "  {\n",
+        "    \"input\": \"How many continents are there in the world?\",\n",
+        "    \"output\": \"<thinking>The question is about the number of continents. While models vary, the most commonly accepted number in English-speaking countries is seven: Africa, Antarctica, Asia, Australia, Europe, North America, and South America.</thinking>Seven.\"\n",
+        "  },\n",
+        "  {\n",
+        "    \"input\": \"What is the longest river in the world?\",\n",
+        "    \"output\": \"<thinking>I must identify the world's longest river. For a long time, the Nile was considered the longest, but more recent geographical measurements and analyses often conclude that the Amazon River is slightly longer.</thinking>The Amazon River (though the Nile is often cited, the Amazon is generally accepted as slightly longer by most modern studies).\"\n",
+        "  },\n",
+        "  {\n",
+        "    \"input\": \"What is the main component of the atmosphere of Mars?\",\n",
+        "    \"output\": \"<thinking>The user is asking about the primary gas in the Martian atmosphere. Unlike Earth's nitrogen and oxygen, Mars's atmosphere is extremely thin and composed predominantly of carbon dioxide.</thinking>Carbon dioxide (CO\\u2082).\"\n",
+        "  }\n",
+        "]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "template = FewShotChatMessagePromptTemplate(\n",
+        "    example_prompt=few_shot_prompt,\n",
+        "    examples=examples,\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "system_prompt = \"\"\"\n",
+        "You are an expert Q&A engine designed to answer factual questions.\n",
+        "\n",
+        "Your primary instruction is to analyze the user's question, determine the correct factual answer, and format your entire response in a two-part structure:\n",
+        "\n",
+        "1.  **Thinking Process:** You must first generate an internal thought process enclosed strictly within the tags `<thinking>` and `</thinking>`. This section should briefly describe your reasoning, recall of facts, filtering of potential incorrect answers, or the steps taken to arrive at the conclusion.\n",
+        "2.  **Final Answer:** Immediately after the `</thinking>` tag, provide only the final, concise, factual answer to the user's question.\n",
+        "\n",
+        "**STRICT FORMAT REQUIREMENT:**\n",
+        "Your entire output for any given input MUST follow this structure:\n",
+        "\n",
+        "`<thinking> [Your internal reasoning process goes here, recalling facts and confirming the answer.] </thinking>[Final, concise answer]`\n",
+        "\"\"\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "prompt_template = ChatPromptTemplate.from_messages([\n",
+        "    (\"system\", system_prompt),\n",
+        "    template,\n",
+        "    (\"user\", \"{query}\"),\n",
+        "])\n",
+        "\n",
+        "pipeline = prompt_template | llm"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-----------------------------------------\n",
+            "\u001b[90m\u001b[1mThinking Process:\u001b[0m\n",
+            "\u001b[90m  The user is asking for the Prime Minister of India in 2025. As of my last update, the current Prime Minister is Narendra Modi. However, predicting political positions for a future year, especially one that involves elections and potential changes, is speculative and beyond my current knowledge base which is based on past and present data.\u001b[0m\n",
+            "\n",
+            "\u001b[32m\u001b[1mFinal Answer:\u001b[0m\n",
+            "\u001b[32m  As of my last update, Narendra Modi is the Prime Minister of India. Predicting who will hold the office in 2025 is speculative, as it depends on future elections and political developments.\u001b[0m\n",
+            "-----------------------------------------\n"
+          ]
+        }
+      ],
+      "source": [
+        "print_formatted_response(\n",
+        "    pipeline.invoke({\"query\": \"who is the prime minister of India in 2025?\"}).content\n",
+        ")"
       ]
     }
   ],
